tests/templatetest/foo/bar/C.java
package foo.bar;

import edu.ucr.cs.riple.taint.ucrtainting.qual.*;

public class C extends B {

  //    // :: error: override.return
  //    public String foo(){
  //        return "C";
  //    }
}
